hphp/test/slow/vec/bad-init2.php.expectf
Fatal error: Collection element cannot be marked as reference in %s/test/slow/vec/bad-init2.php on line 5